<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_primary"
        android:paddingBottom="12dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_chess"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:textColor="@color/white_bb"
                android:text="@string/app_name"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <!--<ImageView-->
                <!--android:layout_width="@dimen/toolbar_height"-->
                <!--android:layout_height="@dimen/toolbar_height"-->
                <!--android:padding="17dp"-->
                <!--android:src="@drawable/ic_share"/>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <com.dss886.dotaautochess.widget.TitleView
                android:layout_width="0dp"
                android:layout_height="@dimen/list_title_height_big"
                android:layout_weight="1"
                android:text="@string/match_hero_pool_title"/>

            <ImageView
                android:id="@+id/delete"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_delete"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="6dp"
                android:layout_marginEnd="12dp"/>

        </LinearLayout>

        <com.dss886.dotaautochess.feature.match.pool.HeroPoolView
            android:id="@+id/hero_pool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:columnCount="5"
            app:itemMargin="@dimen/match_hero_pool_item_margin"
            app:itemRatioHeight="144"
            app:itemRatioWidth="256"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="12dp"
        android:clipToPadding="false"/>

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="@color/white_44"
        android:lineSpacingExtra="8dp"
        android:textSize="12sp"
        android:visibility="gone"
        android:text="@string/match_empty_view_tip"/>

</LinearLayout>